feat: loom and smithing